--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -19,6 +19,10 @@
             <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
           </ul>
         </nav>
+
+        <ul class="nav nav-pills pull-right btn-group-xs">
+          <%= render "login_bar.html", current_user: Guardian.Plug.current_resource(@conn) , conn: @conn %>
+        </ul>
         <span class="logo"></span>
       </header>
 
